@@ -7,7 +7,6 @@ DESIGN
 
 HIGH
 - attach wire to correct location on pH meter
-- indicator is pointing to wrong value on pH meter
 - constrain pH and volume so that student computations match displayed values, as in Java sim
 - graph
 
